--- a/pipeline.yml
+++ b/pipeline.yml
@@ -24,73 +24,11 @@ resource_types:
     tag: stable
     username: _json_key
 jobs:
-- name: run scripts.sh
-  serial: true
-  plan:
-  - aggregate:
-    - get: git
-      trigger: true
-    timeout: 1h
-  - task: run scripts.sh
-    config:
-      platform: linux
-      image_resource:
-        type: registry-image
-        source:
-          repository: ubuntu
-          tag: latest
-      params:
-        ARTIFACTORY_PASSWORD: ((artifactory.password))
-        ARTIFACTORY_URL: ((artifactory.url))
-        ARTIFACTORY_USERNAME: ((artifactory.username))
-      run:
-        path: /bin/sh
-        args:
-        - -c
-        - |
-          which bash > /dev/null
-          if [ $? != 0 ]; then
-            echo "WARNING: Bash is not present in the docker image"
-            echo "If your script depends on bash you will get a strange error message like:"
-            echo "  sh: yourscript.sh: command not found"
-            echo "To fix, make sure your docker image contains bash!"
-            echo ""
-            echo ""
-          fi
-
-          if [ -e /etc/alpine-release ]
-          then
-            echo "WARNING: you are running your build in a Alpine image or one that is based on the Alpine"
-            echo "There is a known issue where DNS resolving does not work as expected"
-            echo "https://github.com/gliderlabs/docker-alpine/issues/255"
-            echo "If you see any errors related to resolving hostnames the best course of action is to switch to another image"
-            echo "we recommend debian:stretch-slim as an alternative"
-            echo ""
-            echo ""
-          fi
-
-          export GIT_REVISION=`cat .git/ref`
-
-          ./scripts.sh
-          EXIT_STATUS=$?
-          if [ $EXIT_STATUS != 0 ] ; then
-            exit 1
-          fi
-        dir: git
-      inputs:
-      - name: git
-      caches:
-      - path: ../../../var/halfpipe/cache
-      - path: ../../../halfpipe-cache
-    timeout: 1h
-    attempts: 1
 - name: deploy-cf
   serial: true
   plan:
   - aggregate:
     - get: git
-      passed:
-      - run scripts.sh
       trigger: true
     timeout: 1h
   - put: cf halfpipe-push
@@ -104,6 +42,62 @@ jobs:
       timeout: 1h
     timeout: 1h
     attempts: 2
+  - aggregate:
+    - do:
+      - task: run scripts.sh
+        config:
+          platform: linux
+          image_resource:
+            type: registry-image
+            source:
+              repository: ubuntu
+              tag: latest
+          params:
+            ARTIFACTORY_PASSWORD: ((artifactory.password))
+            ARTIFACTORY_URL: ((artifactory.url))
+            ARTIFACTORY_USERNAME: ((artifactory.username))
+            TEST_ROUTE: www-dev-CANDIDATE.springernature.app
+          run:
+            path: /bin/sh
+            args:
+            - -c
+            - |
+              which bash > /dev/null
+              if [ $? != 0 ]; then
+                echo "WARNING: Bash is not present in the docker image"
+                echo "If your script depends on bash you will get a strange error message like:"
+                echo "  sh: yourscript.sh: command not found"
+                echo "To fix, make sure your docker image contains bash!"
+                echo ""
+                echo ""
+              fi
+
+              if [ -e /etc/alpine-release ]
+              then
+                echo "WARNING: you are running your build in a Alpine image or one that is based on the Alpine"
+                echo "There is a known issue where DNS resolving does not work as expected"
+                echo "https://github.com/gliderlabs/docker-alpine/issues/255"
+                echo "If you see any errors related to resolving hostnames the best course of action is to switch to another image"
+                echo "we recommend debian:stretch-slim as an alternative"
+                echo ""
+                echo ""
+              fi
+
+              export GIT_REVISION=`cat .git/ref`
+
+              ./scripts.sh
+              EXIT_STATUS=$?
+              if [ $EXIT_STATUS != 0 ] ; then
+                exit 1
+              fi
+            dir: git
+          inputs:
+          - name: git
+          caches:
+          - path: ../../../var/halfpipe/cache
+          - path: ../../../halfpipe-cache
+        attempts: 1
+    timeout: 1h
   - put: cf halfpipe-promote
     resource: CF api.snpaas.eu workshop dev
     params:
