--- a/pipeline.yml
+++ b/pipeline.yml
@@ -50,8 +50,8 @@ jobs:
           image_resource:
             type: registry-image
             source:
-              repository: node
-              tag: 10.15-stretch
+              repository: browserless/chrome
+              tag: latest
           params:
             ARTIFACTORY_PASSWORD: ((artifactory.password))
             ARTIFACTORY_URL: ((artifactory.url))
